--- a/rutube/Gemfile
+++ b/rutube/Gemfile
@@ -18,8 +18,13 @@ gem 'webpacker', '~> 5.0'
 gem 'turbolinks', '~> 5'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 2.7'
+#로그인기능 추가
 gem 'devise'
+# 로그인 관련 기능 언어변경
 gem 'devise-i18n'
+# bootstrap 추가
+gem 'bootstrap'
+gem 'font-awesome-rails'
 
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
