--- a/rutube/Gemfile
+++ b/rutube/Gemfile
@@ -24,6 +24,8 @@ gem 'devise'
 gem 'devise-i18n'
 # 프로젝트 레벨에서 다국어 처리
 gem 'rails-i18n'
+#파일업로드를 위해서
+gem 'carrierwave'
 # bootstrap 추가
 gem 'bootstrap'
 gem 'font-awesome-rails'
